--- a/src/app/shared/yklib-demo/yklib-demo.main.html
+++ b/src/app/shared/yklib-demo/yklib-demo.main.html
@@ -1,8 +1,32 @@
-<aside class="pull-left">
-    <h3>yk组件库</h3>
+<aside class="pull-left demo-nav">
+    <h4>yk组件库</h4>
     <ul>
         <li routerLinkActive="active">
             <a routerLink="yk-nav">导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
+        </li>
+        <li routerLinkActive="active">
+            <a>导航</a>
         </li>
     </ul>
 </aside>
