--- a/src/app/main/full.component.html
+++ b/src/app/main/full.component.html
@@ -1,4 +1,7 @@
-<div class="hold-transition sidebar-mini fixed" [ngClass]="setTheme()" [class.sidebar-collapse]="collapsed">
+<div class="hold-transition sidebar-mini fixed"
+     [ngClass]="setTheme()"
+     [class.sidebar-collapse]="collapsed"
+     [class.sidebar-open]="!collapsed">
     <navbar (changeTheme)="changeTheme($event)" (sidebarCollapse)="collapse($event)"></navbar>
     <toolbar></toolbar>
 </div>
