--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -2,16 +2,16 @@
     <section class="sidebar">
         <ul class="sidebar-menu">
             <li class="header">主导航</li>
-            <li class="treeview">
-                <a href="#">
+            <li class="treeview" [class.active]="dashboardActive">
+                <a role="button" (click)="dashboardActive = !dashboardActive">
                     <i class="fa fa-dashboard"></i> <span>控制面板</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    <li><a role="button"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                    <li><a role="button"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                 </ul>
             </li>
             <li class="treeview">
@@ -26,7 +26,8 @@
                     <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
                     <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
                     <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                    <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                    <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed
+                        Sidebar</a></li>
                 </ul>
             </li>
             <li routerLinkActive="active">
