--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,3 +1,11 @@
+input {
+    outline: none;
+}
+
+input:focus, input:hover, input:active {
+    outline: none;
+}
+
 input[type="checkbox"] {
     -webkit-appearance: none;
     background-size: 16px 16px;
