--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -13,6 +13,9 @@
                 <li>
                     <a role="button" (click)="setTheme()">主题</a>
                 </li>
+                <li>
+                    <a role="button" (click)="setLayout()">显示</a>
+                </li>
                 <li dropdown class="user-menu">
                     <a role="button" dropdownToggle>
                         <span class="hidden-xs">用户名</span>
