--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -43,8 +43,37 @@
             </span>
                 </a>
             </li>
+            <li class="treeview" [class.active]="formActive">
+                <a role="button" (click)="formActive = !formActive">
+                    <i class="fa fa-edit"></i>
+                    <span>yk-forms</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a role="button">
+                            <i class="fa fa-circle-o"></i>
+                            General Elements
+                        </a>
+                    </li>
+                    <li>
+                        <a role="button">
+                            <i class="fa fa-circle-o"></i>
+                            Advanced Elements
+                        </a>
+                    </li>
+                    <li>
+                        <a role="button">
+                            <i class="fa fa-circle-o"></i>
+                            Editors
+                        </a>
+                    </li>
+                </ul>
+            </li>
             <li class="treeview">
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-pie-chart"></i>
                     <span>Charts</span>
             <span class="pull-right-container">
@@ -79,7 +108,7 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-laptop"></i>
                     <span>UI Elements</span>
             <span class="pull-right-container">
@@ -126,36 +155,7 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-edit"></i>
-                    <span>Forms</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li>
-                        <a href="pages/forms/general.html">
-                            <i class="fa fa-circle-o"></i>
-                            General Elements
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pages/forms/advanced.html">
-                            <i class="fa fa-circle-o"></i>
-                            Advanced Elements
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pages/forms/editors.html">
-                            <i class="fa fa-circle-o"></i>
-                            Editors
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="treeview">
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-table"></i>
                     <span>Tables</span>
             <span class="pull-right-container">
@@ -199,7 +199,7 @@
                 </a>
             </li>
             <li class="treeview">
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-folder"></i>
                     <span>Examples</span>
             <span class="pull-right-container">
@@ -264,7 +264,7 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-share"></i>
                     <span>Multilevel</span>
             <span class="pull-right-container">
@@ -273,13 +273,13 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="#">
+                        <a role="button">
                             <i class="fa fa-circle-o"></i>
                             Level One
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a role="button">
                             <i class="fa fa-circle-o"></i>
                             Level One
                 <span class="pull-right-container">
@@ -288,13 +288,13 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">
+                                <a role="button">
                                     <i class="fa fa-circle-o"></i>
                                     Level Two
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a role="button">
                                     <i class="fa fa-circle-o"></i>
                                     Level Two
                     <span class="pull-right-container">
@@ -303,13 +303,13 @@
                                 </a>
                                 <ul class="treeview-menu">
                                     <li>
-                                        <a href="#">
+                                        <a role="button">
                                             <i class="fa fa-circle-o"></i>
                                             Level Three
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a role="button">
                                             <i class="fa fa-circle-o"></i>
                                             Level Three
                                         </a>
@@ -319,7 +319,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">
+                        <a role="button">
                             <i class="fa fa-circle-o"></i>
                             Level One
                         </a>
@@ -334,19 +334,19 @@
             </li>
             <li class="header">LABELS</li>
             <li>
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-circle-o text-red"></i>
                     <span>Important</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-circle-o text-yellow"></i>
                     <span>Warning</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a role="button">
                     <i class="fa fa-circle-o text-aqua"></i>
                     <span>Information</span>
                 </a>
