--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -52,8 +52,8 @@
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li>
-                        <a role="button">
+                    <li routerLinkActive="active">
+                        <a role="button" routerLink="form/general">
                             <i class="fa fa-circle-o"></i>
                             General Elements
                         </a>
